--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h2>RUN BUDDY</h2>
-        What We Do
+        What We Do What Do Your trainers reach out
         🏃
     </body>
 </html>
