--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        
     </head>
     <body>
         <header>
@@ -10,7 +12,7 @@
         <h1>
             <a href="/">RUN BUDDY</a> 
         </h1>
-        <nav></nav>
+        <nav>
         <!-- unordered list item-->
         <ul>
             <!-- list item element-->
@@ -28,6 +30,7 @@
                 <a href="#reach-out">Reach Out</a>
             </li>
         </ul>
+    </nav>
         
         </header>
 
