--- a/index.html
+++ b/index.html
@@ -36,8 +36,36 @@
 
         <!-- hero/jumbotron -->
         <section>
-
+            <div>
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trianers will
+                    schedule a consult
+                </p>
+                <form>
+                    <label for="name">Enter full name:</label>
+                    <input type="text" placeholder="Your Name" name="name" id="name">
+                    <label for="email">Enter email address:</label>
+                    <input type="email" placeholder="Email address" name="email" id="email">
+                    <label for="phone">Enter a telephone number:</label>
+                    <input type="tel" placeholder="Phone number" name="phone" id="phone">
+                    <p>
+                        Have you worked out with a trainer before?
+                        <input type="radio" name="trainer-confrim" id="trainer-yes">
+                        <label for="trainer-yes">Yes</label>
+                        <input type="radio" name="trainer-confirm" id="trainer-no">
+                        <label for="trainer-no">No</label>
+                        <P>
+                        <label for="check-box">I acknowlage that i am at least 18 years of age</label>
+                        <input type="checkbox" name="check-box" id="check-box">
+                        </P>
+                        <button type="submit">
+                            Get running
+                        </button>
+                    </p>
+                </form>
+            </div>
         </section>
+        <!-- end hero -->
 
         <!-- "what we do" section -->
         <section>
@@ -62,6 +90,10 @@
         <!-- footer -->
         <footer>
             <h2>❤️ made with love by run buddy.</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy </a> <br/>
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
