add the trainers

--- a/index.html
+++ b/index.html
@@ -105,8 +105,42 @@
         </section>
 
         <!-- "meet the trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <!-- first trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his work out clothes ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Sthephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ullam commodi neque, perspiciatis nam cumque fugit accusantium dignissimos nobis impedit id eligendi amet ducimus rem repellendus. Eius quaerat natus quidem.
+                    </p>
+                </div>
+            </article>
+            <!-- second trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, culpa illum cupiditate voluptatum numquam quod dignissimos iure tempora eos asperiores? Culpa a perferendis ex, voluptate veniam error quidem iure earum.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+            </article>
+            <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a head band"/>
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the headband" Smith</h3>
+                    <h4>Strenght</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facere dolorem nisi nostrum distinctio eaque aperiam aspernatur provident, cum ut libero natus. Ea error accusantium quis minima sunt non ut.
+                    </p>
+                </div>
+
+            </article>
         </section>
 
         <!-- "reach out" section-->
