--- a/index.html
+++ b/index.html
@@ -144,24 +144,26 @@
         </section>
 
         <!-- "reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24476.165890934175!2d-86.25550759186581!3d39.92974029227456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8814aab7e9f6904f%3A0x500a3bb3357831ee!2sHoosier%20Heights%20Indianapolis!5e0!3m2!1sen!2sus!4v1628134319283!5m2!1sen!2sus" 
-                width="400" height="400" style="border:0;" 
-                allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24476.165890934175!2d-86.25550759186581!3d39.92974029227456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8814aab7e9f6904f%3A0x500a3bb3357831ee!2sHoosier%20Heights%20Indianapolis!5e0!3m2!1sen!2sus!4v1628170282306!5m2!1sen!2sus"
+                 
+                 style="border:0;" allowfullscreen="" 
+                 loading="lazy"></iframe>
             </div>
-            <div>
+            <div class="contact-info1">
                 <h3>Run Buddy</h3>
-                <p>Any questions or concerns before signing up?
+                <p>
+                    Any queestions or concerns before signing up?
                     <br/>
                     Let us know and we'll be happy to talk to you!
                 </p>
                 <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
+                    55 main street <br/>
+                    some town, ca <br/>
                     12345 <br/>
-                    P: 555.RUN.BUDZ (555-786-2839) <br/>
+                    P: 555.RUNDUDZ (555-786-2839)<br/>
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
             </div>
@@ -174,6 +176,7 @@
                 <a href="#">Read Our Privacy Policy </a> <br/>
                 &copy; 2019 Run Buddy, Inc.
             </div>
+            
         </footer>
     </body>
 
