add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis ducimus distinctio beatae corporis nisi tempora eligendi necessitatibus, illo adipisci cumque dolores inventore perferendis nobis veritatis culpa, facere, non recusandae ipsam.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trianers will
@@ -63,6 +69,8 @@
                         </button>
                     </p>
                 </form>
+                
+
             </div>
         </section>
         <!-- end hero -->
