--- a/index.html
+++ b/index.html
@@ -159,20 +159,19 @@
                  
                  style="border:0;" allowfullscreen="" 
                  loading="lazy"></iframe>
-                 
+
                 <div class="contact-form">
                     <h3>Contact Us</h3>
-                    <form>
-                    <label for="contact-name">Your Name</label>
-                    <input type="text" id="contact-name" placeholder="Your Name">
+                    <form >
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Yor Name">
 
-                    <label for="contact-message">Message</label>
-                    <textarea id="contact-message" placeholder="Message"></textarea>
+                        <label for="contact-meassage">Message</label>
+                        <textarea id="contact-meassage" placeholder="Message"></textarea>
 
-                    <button type="submit">Submit</button>
-                </form>
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
-
                  <div>
                     <h3>Run Buddy</h3>
                     <p>
