--- a/index.html
+++ b/index.html
@@ -77,44 +77,82 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
+            <div class="flex-row">
             <h2 class="section-title primary-border">What We Do</h2> 
+        </div>
+            <div class="flex-row">
                 <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
 
                 </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
-
-            <div>
-                <img src="./assets/images/01-04-svgs/step-1.svg" alt="">
-                <h3><span>Step 1: Fill out the form above.</span></h3>
-                <p>you're already here, so why not?</p>
+             </div>
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/01-04-svgs/step-1.svg" alt="">
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/01-04-svgs/step-2.svg" alt="">
-                <h3><span>Step 2: Consult with on of out trainers.</span></h3>
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/01-04-svgs/step-2.svg" alt="">
+                    </div>
+                    <div class="step-text">
+                        <h4>Consult With One Of Our Trainers.</h4>
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+                </div>
+                
             </div>
 
-            <div>
-                <img src="./assets/images/01-04-svgs/step-3.svg" alt="">
-                <h3><span>Step 3: Get Running.</span></h3>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/01-04-svgs/step-3.svg" alt="">
+                    </div>
+                <div class="step-text">
+                <h4>Get Running.</h4>
                 <p>Hit the ground running (literakky) once your trainer lays out your plan.</p>
+                </div>
+            </div>
             </div>
 
-            <div>
-                <img src="./assets/images/01-04-svgs/step-4.svg" alt="">
-                <h3><span>Step 4: See Results.</span></h3>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-4.svg" alt="">
+                    </div>
+                    <div class="step-text">
+                <h4>See Results.</h4>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
+            </div>
+        </div>
+
         </section>
 
         <!-- "meet the trainers" section-->
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>  
             <!-- first trainer bio -->
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his work out clothes ready to pump iron"/>
@@ -153,7 +191,9 @@
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24476.165890934175!2d-86.25550759186581!3d39.92974029227456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8814aab7e9f6904f%3A0x500a3bb3357831ee!2sHoosier%20Heights%20Indianapolis!5e0!3m2!1sen!2sus!4v1628170282306!5m2!1sen!2sus"
                  
