--- a/index.html
+++ b/index.html
@@ -57,13 +57,20 @@
                     <input class="form-input" type="tel" placeholder="Phone number" name="phone" id="phone">
                     <p>
                         Have you worked out with a trainer before?
+                        <span class="radio-wrapper">
                         <input type="radio" name="trainer-confrim" id="trainer-yes">
                         <label for="trainer-yes">Yes</label>
+                    </span>
+                    <span class="radio-wrapper">
                         <input type="radio" name="trainer-confirm" id="trainer-no">
                         <label for="trainer-no">No</label>
+                    </span>
                         <P>
+                            <span class="checkbox-wrapper">
+                                <input type="checkbox" name="check-box" id="check-box">
                         <label for="check-box">I acknowlage that i am at least 18 years of age</label>
-                        <input type="checkbox" name="check-box" id="check-box">
+                        
+                    </span>
                         </P>
                         <button type="submit">
                             Get running
